<resources>
    <string name="app_name">Minha Calculadora</string>

    <!-- Operações/Ações -->
    <string name="limpar">C</string>
    <string name="dividir">/</string>
    <string name="multiplicar">*</string>
    <string name="somar">+</string>
    <string name="subtrair">-</string>
    <string name="igual">=</string>

    <!-- Dígitos -->
    <string name="zero">0</string>
    <string name="zero_duplo">00</string>
    <string name="um">1</string>
    <string name="dois">2</string>
    <string name="tres">3</string>
    <string name="quatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="sete">7</string>
    <string name="oito">8</string>
    <string name="nove">9</string>
    <string name="ponto">.</string>

</resources>
